# PHONE-TV-ANDROID

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  setup-webcam.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  release.yml  supply-chain.yml
assets/: phone-tv.desktop
benches/: micro.rs
docs/: BENCHMARK.md
docs/superpowers/plans/: 2026-03-20-security-tab-and-ui-redesign.md  2026-03-30-auto-backup.md  2026-04-02-android-cleaner-pentest.md
docs/superpowers/specs/: 2026-03-20-security-tab-and-ui-redesign.md  2026-03-30-auto-backup-design.md  2026-04-02-android-cleaner-pentest-design.md
scripts/: backup-dashboard.py  build-appimage.sh  install-backup-hook.sh  phone-backup.sh  webcam-fanout.sh
src/: adb.rs  app.rs  config.rs  lib.rs  main.rs  theme.rs  types.rs
src/assets/brands/: motorola.toml  samsung.toml
src/backup/: mod.rs
src/brands/: mod.rs  types.rs
src/history/: mod.rs  types.rs
src/llm/: mod.rs  prompts.rs  types.rs
src/pentest/: mod.rs  rootcheck.rs  vulns.rs
src/security/: apps.rs  bulletins.rs  mod.rs  monitoring.rs  permissions.rs  posture.rs  score.rs
src/ui/: audit.rs  devices.rs  mod.rs  phone.rs  security.rs  sidebar.rs  tv.rs  video.rs  widgets.rs  wizard.rs
src/wizard/: mod.rs  report.rs  types.rs
