[package]
name = "phone-tv"
version = "3.0.0"
edition = "2021"
description = "Contrôle Android Phone & TV via ADB"
authors = ["OCB"]

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "6.0"
anyhow = "1.0"
rfd = "0.17"
